feat: Añadir documentación de la API TalaTrivia y configuración del entorno
- Creado nuevo archivo de entorno de Postman.
- Actualizada documentación de la API en el Controller con nuevo título, descripción e información de contacto.
- Mejorada la interfaz de Swagger UI con colores de marca actualizados y logo.
- Añadida documentación OpenAPI integral para la API TalaTrivia, incluyendo endpoints para autenticación, preguntas y gestión de trivias.
- Definidos esquemas para respuestas de error, respuestas exitosas, metadatos de paginación y errores de validación.
- Incluidas descripciones detalladas y ejemplos para cuerpos de petición y respuesta en varios endpoints.
